--- a/src/package.json
+++ b/src/package.json
@@ -20,14 +20,9 @@
     "test": "umi test",
     "test:component": "umi test ./src/components",
     "test:all": "node ./tests/run-tests.js",
-    "prettier": "prettier --write './src/**/*'",
-    "docker:dev": "docker-compose -f ./docker/docker-compose.dev.yml up",
-    "docker:build": "docker-compose -f ./docker/docker-compose.dev.yml build",
-    "docker-prod:dev": "docker-compose -f ./docker/docker-compose.yml up",
-    "docker-prod:build": "docker-compose -f ./docker/docker-compose.yml build"
+    "prettier": "prettier --write './src/**/*'"
   },
   "dependencies": {
-    "@antv/data-set": "^0.10.0",
     "@babel/runtime": "^7.1.2",
     "antd": "^3.10.4",
     "classnames": "^2.2.6",
