--- a/src/package.json
+++ b/src/package.json
@@ -23,65 +23,65 @@
     "prettier": "prettier --write './src/**/*'"
   },
   "dependencies": {
-    "@babel/runtime": "^7.1.2",
-    "antd": "^3.11.2",
+    "@babel/runtime": "^7.3.1",
+    "antd": "^3.13.2",
     "classnames": "^2.2.6",
     "dva": "^2.4.0",
     "enquire-js": "^0.2.1",
-    "hash.js": "^1.1.5",
+    "hash.js": "^1.1.7",
     "lodash": "^4.17.10",
-    "lodash-decorators": "^6.0.0",
+    "lodash-decorators": "^6.0.1",
     "memoize-one": "^4.0.0",
-    "moment": "^2.22.2",
+    "moment": "^2.24.0",
     "numeral": "^2.0.6",
-    "nzh": "^1.0.3",
+    "nzh": "^1.0.4",
     "omit.js": "^1.0.0",
     "path-to-regexp": "^2.4.0",
-    "prop-types": "^15.5.10",
-    "qs": "^6.5.2",
-    "react": "^16.5.1",
+    "prop-types": "^15.7.2",
+    "qs": "^6.6.0",
+    "react": "^16.8.2",
     "react-container-query": "^0.11.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.5.1",
+    "react-dom": "^16.8.2",
     "react-fittext": "^1.0.0",
     "react-router-dom": "^4.3.1",
     "react-scrollable-anchor": "^0.6.1"
   },
   "devDependencies": {
-    "@types/react": "^16.4.16",
-    "@types/react-dom": "^16.0.9",
+    "@types/react": "^16.8.3",
+    "@types/react-dom": "^16.8.1",
     "antd-pro-merge-less": "^0.1.0",
-    "antd-theme-webpack-plugin": "^1.1.8",
+    "antd-theme-webpack-plugin": "^1.2.0",
     "babel-eslint": "^10.0.1",
     "cross-env": "^5.1.1",
     "cross-port-killer": "^1.0.1",
-    "enzyme": "^3.7.0",
-    "eslint": "^5.4.0",
+    "enzyme": "^3.8.0",
+    "eslint": "^5.14.0",
     "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-prettier": "^3.0.1",
-    "eslint-plugin-babel": "^5.1.0",
-    "eslint-plugin-compat": "^2.6.2",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-markdown": "^1.0.0-beta.6",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-compat": "^2.7.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-markdown": "^1.0.0",
+    "eslint-plugin-react": "^7.12.4",
     "gh-pages": "^2.0.1",
-    "husky": "^1.1.2",
-    "lint-staged": "^8.0.4",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.4",
     "merge-umi-mock-data": "^0.0.3",
     "mockjs": "^1.0.1-beta3",
     "prettier": "1.14.3",
     "pro-download": "^1.0.1",
-    "stylelint": "^9.4.0",
+    "stylelint": "^9.10.1",
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-standard": "^18.0.0",
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.10.0",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^3.6.0",
-    "umi": "^2.2.1",
+    "umi": "^2.5.0",
     "umi-plugin-ga": "^1.1.3",
-    "umi-plugin-react": "^1.2.0"
+    "umi-plugin-react": "^1.5.0"
   },
   "optionalDependencies": {
     "puppeteer": "^1.10.0"
