--- a/src/package.json
+++ b/src/package.json
@@ -45,6 +45,7 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.8.2",
     "react-fittext": "^1.0.0",
+    "react-media": "^1.9.2",
     "react-router-dom": "^4.3.1",
     "react-scrollable-anchor": "^0.6.1"
   },
